--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -141,6 +141,7 @@ header
 	height: 35px
 	line-height: 35px
 .phone-number
+	color: $gold
 	display: inline-block
 	vertical-align: middle
 	line-height: 35px
@@ -235,7 +236,7 @@ header
 		&:after
 			content: ''
 			width: 2rem
-			height: 100%
+			height: 2.4rem
 			left: 0
 			top: 0.3rem
 			position: absolute
@@ -276,6 +277,7 @@ header
 				padding: 0
 				margin: 0
 	.owl-dots
+		margin-top: 0.5rem
 		text-align: center
 		.owl-dot
 			width: 15px
